Update JWT Implementation for Service, made use of JWT Wrapper Object