@@ -1,5 +1,7 @@
 package com.letter_loom.filter;
 
+import com.letter_loom.entities.Role;
+import com.letter_loom.objects.Jwt;
 import com.letter_loom.services.JwtService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -7,13 +9,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.AllArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Custom JWT Authentication Filter that intercepts incoming requests
@@ -44,17 +47,20 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         String token = authHeader.replace("Bearer ", "");
 
         // If the token is invalid, continue without setting authentication
-        if(!jwtService.validateToken(token)){
+        Jwt jwt = jwtService.parseToken(token);
+        if(jwt==null || jwt.isExpired()){
             filterChain.doFilter(request,response);
             return;
         }
 
+        String userId = jwt.getSubject();
+        Role role = jwt.getRole();
         // Create an authentication object with the user ID as the principal
         UsernamePasswordAuthenticationToken authenticationToken =
                 new UsernamePasswordAuthenticationToken(
-                        Long.parseLong(jwtService.getSubject(token)), // user's id (subject)
+                        Long.parseLong(userId), // user's id (subject)
                         null, // no credentials needed
-                        Collections.emptyList() // no authorities assigned (to be updated later)
+                        List.of(new SimpleGrantedAuthority("ROLE_"+role))
                 );
 
         // Attach request-specific details (like IP, session, etc.) to the authentication
